# Cleaker

./: .gitignore  LICENSE  README.md  The Algebra of Me.md  _config.yml  cleaker.js  index.html  index.js  index.md  jsdoc.json  package-lock.json  package.json  routes.js  spec.js  test.js  vite.config.js
.github/workflows/: docs.yml
Python/: LICENSE  README.md  index.md
Python/cleaker/: __init__.py
Rust/: README.md  index.md
Typescript/: .gitignore  LICENSE  README.md  index.md  package.json  tsconfig.json  tsconfig.types.json  typedoc.json  vite.config.js
Typescript/dist-types/: index.d.ts.map
Typescript/docs/: Cleaker.md  index.html  index.md
Typescript/src/: binder.ts
Typescript/tests/: space.test.ts
Typescript/typedocs/: 404.html  Algebra-of-Me.html  Cleaker.html  The-Flat-Universe.html  The-Flat-Universe.md  The-Model.html  hashmap.json  index.html  index.md
Typescript/types/: cleaker.d.ts
crate/src/: client.rs  main.rs
crates/: Cargo.toml  README.md
docs/: El Universo Es Plano.md  README.md  The Algebra of Me.md  borrador.md  index.html
docs/en/: Cleaker.md  Notes.md  The Algebra of Me.md  The Flat Universe.md  The Model.md  The-Algebra-of-Me.md  The-Flat-Universe.md  The-Model.md
notes/: BlockChain.md  Concepts.md
npm/: LICENSE  README.md  package.json  tsconfig.json  typedoc.json
pip/: README.md
server/: README.md  blockchain.db  blockchain.db-shm  blockchain.db-wal  ecosystem.config.cjs  package-lock.json  package.json  server.ts  typedoc.json
src/: cleaker.browser.js  cleaker.js  cleaker.node.js
tests/: test.js
(+742 files in other folders)
